refactoring closing rabbit services
